删除无用配置