@@ -27,11 +27,51 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.6</version>
         </dependency>
+
         <dependency>
-            <groupId>com.easyyang.dbtest</groupId>
-            <artifactId>easyyang-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.11.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.1</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>
+                        -Dfile.encoding=UTF-8 -Xms256m -Xmx1024m -Xss128k -XX:PermSize=128m -XX:MaxPermSize=512m
+                        -verbose:gc -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode
+                        -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -noclassgc
+                    </jvmArguments>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+        <resources>
+            <resource>
+                <filtering>true</filtering>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>application.properties</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
+
 
 </project>
